--- a/package.json
+++ b/package.json
@@ -5,5 +5,19 @@
   "main": "index.js",
   "repository": "git@github.com:terrytmp/quicksort.git",
   "author": "Terry Tampa <terry.tmp9@gmail.com>",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "babel": "^6.23.0",
+    "babel-loader": "^7.1.1",
+    "chai": "^4.1.0",
+    "karma": "^1.7.0",
+    "karma-babel-preprocessor": "^6.0.1",
+    "karma-chai": "^0.1.0",
+    "karma-chrome-launcher": "^2.2.0",
+    "karma-mocha": "^1.3.0",
+    "karma-spec-reporter": "^0.0.31",
+    "karma-webpack": "^2.0.4",
+    "mocha": "^3.5.0",
+    "webpack": "^3.4.1"
+  }
 }
